fixed weird gaps, added smooth scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 ::-moz-selection {
-    background-color: #fcd2ff;
+    background-color: #F56060;
     color: #fff
 }
 
 ::selection {
-    background-color: #fcd2ff;
+    background-color: #F56060;
     color: #fff
 }
 
@@ -34,6 +34,10 @@
     color: #777777;
     font-weight: 300
 }
+
+html {
+    scroll-behavior: smooth;
+  }
 
 .bold {
     font-weight: 700;
@@ -2087,7 +2091,7 @@ nav a:hover {
 }
 
 .section-gap {
-    padding: 30px 0
+    padding: 10px 0
 }
 
 .section-title {
